@@ -5,7 +5,7 @@ magnifying-glass-prototype.name=Magnifying Glass Prototype
 
 pattern.0value.1units={0}{1}
 pattern.0label.1value={0}: {1}
-pattern.showH2OMolecules=Show {0} Molecules
+pattern.showH2OMolecules=Show {0}
 pattern.0solution.1symbol={0} ({1})
     
 pH=pH
@@ -33,10 +33,11 @@ testSolution=Introduction
 customSolution=Custom Solution
 molesPerLiter=mol/L
 liters=L
-magnifyingGlass=Magnifying Glass
-concentrationGraph=Concentration Graph
+magnifyingGlass=Molecules
+concentrationGraph=Concentration
 concentrationGraph.yAxis=Equilibrium Concentration (mol/L)
 negligible=negligible
 pHColorKey=pH Color Key
 liquid=Liquid
 views=Views
+showWater=Show Water
