@@ -1,3 +1,6 @@
+8/23/10 change "Magnifying Glass" radio button to "Molecules"
+8/23/10 change "Show H2O molecules" check box to "Show Water"
+8/23/10 change "Concentration Graph" radio button to "Concentration"
 8/23/10 change "Test Solution" to "Introduction"
 8/23/10 modify conductivity tester's brightness model to include a "min brightness" for neutral pH, set to 0.05
 8/19/10 position radio button icons close to their associated labels
